--- a/GitOps/Argo-App.yaml
+++ b/GitOps/Argo-App.yaml
@@ -14,7 +14,7 @@ spec:
       helm:
         valueFiles:
         - $values/GitOps/values.yaml
-    - repoURL:
+    - repoURL: 'https://github.com/tal-hason/dotnet-app.git'
       targetRevision: main
       ref: values
   syncPolicy:
