--- a/GitOps/values.yaml
+++ b/GitOps/values.yaml
@@ -1,9 +1,17 @@
+global:
+  ## Override the release name
+  nameOverride: user#
+  serviceName: dotnet-app
+  namespace: user#-application
+  runTime: dotnet
+  ClusterFqdn: 
+
 image:
   ## Name of the image you want to build/deploy
   ## Defaults to the release name
-  name: quay.io/thason/gitops-demo
+  name: quay.io/thason/hello-app
   ## Tag that you want to build/deploy
-  tag: e28dc8ebfb4934cf1362f87285ebb7c2f1faf4cf
+  tag: v7
 ## Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
 deploy:
   ## Number of pod replicas to deploy
@@ -27,7 +35,7 @@ deploy:
       protocol: TCP
   ## For creating a Route, allowing your application to be accessed from outside the OCP cluster
   route:
-    enabled: false
+    enabled: true
     targetPort: http
     ## More information: https://docs.openshift.com/container-platform/4.6/networking/routes/secured-routes.html
     tls:
@@ -39,15 +47,6 @@ deploy:
       caCertificate:
       certificate:
       destinationCACertificate:
-
-  ingress:
-    enabled: true
-    Domain: apps-crc.testing
-    ## More information: https://docs.openshift.com/container-platform/4.6/networking/routes/secured-routes.html
-    tls:
-      enabled: true
-      termination: edge
-      ## IMPORTANT: Do not check 'key' into git!
 
   ## Freeform Liveness Probe. More information: https://docs.openshift.com/container-platform/4.6/applications/application-health.html#application-health-about_application-health
   livenessProbe:
@@ -108,9 +107,4 @@ deploy:
   #  - name: my-extra-container
   #    command: ["sleep", "infinity"]
   #    image: registry.redhat.io/ubi8/ubi-minimal
-global:
-  ## Override the release name
-  nameOverride: demo
-  serviceName: backend
-  namespace: demo-develop 
-  runTime: dotnet
+
