--- a/GitOps/values.yaml
+++ b/GitOps/values.yaml
@@ -25,7 +25,7 @@ deploy:
   #    memory: 128Mi
   ingress:
     enabled: true
-    Domain: cluster-5shjw.dynamic.redhatworkshops.io
+    Domain: apps.cluster-5shjw.dynamic.redhatworkshops.io
     ## More information: https://docs.openshift.com/container-platform/4.6/networking/routes/secured-routes.html
     tls:
       enabled: true
