--- a/GitOps/values.yaml
+++ b/GitOps/values.yaml
@@ -96,7 +96,7 @@ deploy:
 #    image: registry.redhat.io/ubi8/ubi-minimal
   ## For creating a Route, allowing your application to be accessed from outside the OCP cluster
   route:
-    enabled: true
+    enabled: false
     targetPort: "http"
     ## More information: https://docs.openshift.com/container-platform/4.6/networking/routes/secured-routes.html
     tls:
