--- a/GitOps/PipelineRun.yaml
+++ b/GitOps/PipelineRun.yaml
@@ -1,20 +1,20 @@
 apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
-  generateName: user25-dotnet-app-
+  generateName: user16-dotnet-app-
 spec:
   params:
     - name: GIT_URL
-      value: "https://github.com/tal-hason/dotnet-app.git"
+      value: "https://github.com/sorelsh/dotnet-app.git"
     - name: REGISTRY
-      value: tal-hason
+      value: sorelsh
     - name: IMAGE_NAME
       value: dotnet-app
     - name: IMAGE_TAG
       value: v0
-    - value: user25-application
+    - value: user16-application
   pipelineRef:
-    name: user25-dotnet-app
+    name: user16-dotnet-app
   taskRunTemplate:
     serviceAccountName: pipeline
   timeouts:
