--- a/GitOps/values.yaml
+++ b/GitOps/values.yaml
@@ -55,6 +55,8 @@ deploy:
 
   ## Freeform env. More information: https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
   env:
+    - name: version
+      value: v10
   ## Freeform envFrom. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
   envFrom:
   #  - configMapRef:
